<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RebusActivity!</string>
    <string name="app_name">Android-Oblig4--Rebusl-p</string>
    
    
    
    
    <!-- Main menu strings -->
    <string name="main_button_startmap">Show map</string>
    <string name="main_button_startrace">Start a race</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_button_cancel">Cancel current race</string>

</resources>