<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    
    <Button 
        android:id="@+id/main_button_startmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_startmap"/>
    <Button 
        android:id="@+id/main_button_startrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_startrace"/>
        <Button 
        android:id="@+id/main_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_cancel"/>
    
    
	<Button 
        android:id="@+id/main_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_settings"/>
</LinearLayout>